# icedmenu

./: Cargo.toml  default-config.kdl  flake.nix
examples/: config.kdl  dmenu.kdl  purple.kdl
icedmenu-derive/: .gitignore  Cargo.toml
icedmenu-derive/src/: lib.rs
src/: app.rs  callback.rs  cli.rs  config.rs  font.rs  item.rs  layout.rs  lib.rs  main.rs  menu.rs  settings.rs  style.rs
src/layout/: column.rs  container.rs  item_key.rs  items.rs  query.rs  row.rs  style.rs  text.rs
