[package]
name = "icedmenu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
csscolorparser = "0.6.2"
csv = "1.2.1"
fuzzy-matcher = "0.3.7"
iced = "0.9"
kdl = "4.6.0"
miette = { version = "5.8.0", features = ["fancy"] }
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
wgpu = "0.16.0"
